--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
 
-<script src="bundle.js"></script>
+  <!-- React entry point -->
+  <div id="root"></div>
+
+  <!-- webpack javascript output -->
+  <script src="bundle.js"></script>
 </body>
 </html>
